Fix button appearance on iOS.
Appearance is not a standard property, so Autoprefixer doesn’t prefix
it. Must explicitly specify webkit.

--- a/scss/_components/_button.scss
+++ b/scss/_components/_button.scss
@@ -28,7 +28,7 @@
   text-transform: uppercase;
   text-shadow: none;
   border-radius: $lg-border-radius;
-  appearance: none;
+  -webkit-appearance: none;
 
   &:hover {
     background: lighten($blue, $color-tint);
